<resources>
    <string name="tab_title_top">Top</string>
    <string name="tab_title_new">New</string>
    <string name="tab_title_ask_hn">Ask HN</string>
    <string name="tab_title_show_hn">Show HN</string>
    <string name="tab_title_jobs">Jobs</string>

    <string name="empty_stories">No stories found</string>
    <string name="story_list_item_time_template">Posted %1$s</string>
    <string name="story_list_item_author_template">Posted by %1$s</string>
    <string name="story_list_item_comments_template">{1} votes · {0,choice,0#No comments|1#1 comment|1&lt;{0} comments}</string>
    <string name="story_summary_string_template">%1$s · %2$s votes</string>
    <string name="comment_list_item_header_template">%1$s · %2$s</string>
    <string name="comment_list_item_header_template_removed">Unknown</string>
    <string name="comment_list_item_removed_message">This comment has been removed</string>
    <string name="comment_list_no_comments">No comments</string>
    <string name="comment_list_no_comments_with_retry">No comments.\nClick here to reload</string>
    <string name="view_story_action_button_label">View Story</string>

    <string name="error_retrieving_stories">Error retrieving stories.\nClick here to try again</string>
    <string name="error_retrieving_stories_ephemeral">Error retrieving stories</string>
    <string name="error_retrieving_comments">Error retrieving comments\nClick here to try again</string>
    <string name="error_retrieving_comments_ephemeral">Error retrieving comments</string>
    <string name="error_sharing_link">Error sharing link</string>
    <string name="error_sharing_comments">Error sharing comments</string>
    <string name="error_opening_link">Error opening link</string>
    <string name="share_link">Share Link</string>
    <string name="share_comments">Share Comments</string>
    <string name="retry">Retry</string>
    <string name="settings">Settings</string>

    <plurals name="load_more_comments">
        <item quantity="one">Tap to load %1$s more comment</item>
        <item quantity="other">Tap to load %1$s more comments</item>
    </plurals>

    <string name="settings_cat_title_content">Content</string>
    <string name="settings_cat_key_content">settings_cat_key_content</string>
    <string name="settings_cat_title_about">About</string>
    <string name="settings_cat_key_about">settings_cat_key_about</string>
    <string name="settings_key_show_links_first">settings_key_show_links_first</string>
    <string name="settings_key_app_version">settings_key_app_version</string>
    <string name="settings_key_build_info">settings_key_build_info</string>
    <string name="settings_key_rate">settings_key_rate</string>
    <string name="settings_key_support">settings_key_support</string>
    <string name="settings_key_licenses">settings_key_licenses</string>
    <string name="settings_title_show_links_first">Show links first</string>
    <string name="settings_title_app_version">App version</string>
    <string name="settings_title_build_info">Build info</string>
    <string name="settings_title_rate">Rate app</string>
    <string name="settings_title_support">Support</string>
    <string name="settings_title_licenses">Licenses</string>
    <string name="settings_summary_show_links_first">Open story links directly from the main list, instead of showing comments</string>
    <string name="settings_summary_rate">If you like the app, please leave a rating in Google Play</string>
    <string name="settings_summary_support">Email support with feedback or requests</string>
    <string name="settings_summary_licenses">Libraries used to create this app</string>
</resources>
